# NEN-V

./: Cargo.toml  README.md  VALIDATION.md  fix_bytes.py  learning_log.csv
.claude/: settings.local.json
docs/: RELATORIO_ANALISE_NEN-V_v2.md  adaptive_system_fix_summary.md  autoconfig_plan.md  autoconfig_plan_corrections.md  autoconfig_v2_autonomous.md
examples/: COMPLETE_FLOW_ANALYSIS.md  DIAGNOSTIC_REPORT.md  WEIGHT_DECAY_ANALYSIS.md  basic_network.rs  curiosity_exploration.rs  deep_flow_analysis.rs  diagnose_network_death.rs  rl_agent.rs  test_fire.rs  test_input_propagation.rs  weight_decay_experiment.rs
experiments/hyperparameter_search/: README.md  SCORE_CALCULATION.md  apply_hyperopt.rs  apply_hyperopt_main.rs  environments.rs  evaluation.rs  external_environments.rs  main.rs  mod.rs  orchestrator.rs  param_space.rs  search.rs
experiments/results/: calibrated_run_checkpoint.json  calibrated_run_log.csv  calibrated_run_results.txt  hyperopt_checkpoint.json  hyperopt_extreme2_checkpoint.json  hyperopt_extreme2_log.csv  hyperopt_extreme2_results.txt  hyperopt_extreme_checkpoint.json  hyperopt_extreme_log.csv  hyperopt_extreme_results.txt  hyperopt_fullsearch_checkpoint.json  hyperopt_fullsearch_log.csv  hyperopt_fullsearch_results.txt  hyperopt_log.csv  hyperopt_max_checkpoint.json  hyperopt_max_log.csv  hyperopt_max_results.txt  hyperopt_megasearch_checkpoint.json  hyperopt_megasearch_log.csv  hyperopt_megasearch_results.txt  hyperopt_overkill_checkpoint.json  hyperopt_overkill_log.csv  hyperopt_overkill_results.txt  hyperopt_refine_checkpoint.json  hyperopt_refine_log.csv  hyperopt_refine_results.txt  hyperopt_results.txt  hyperopt_run_checkpoint.json  hyperopt_run_log.csv  hyperopt_run_results.txt  hyperopt_ultra_checkpoint.json  hyperopt_ultra_log.csv  hyperopt_ultra_results.txt  mega_full1_checkpoint.json  mega_full1_log.csv  mega_full_checkpoint.json  mega_full_log.csv  mega_full_results.txt  quick_test_log.csv  quick_test_results.txt  (+22 more)
simulations/: simple_network_sim.rs
simulations/adaptive_learning/: deep_diagnostic.rs  experiment_a_fr_control.rs  experiment_a_prime_pure_homeostasis.rs  experiment_c_grid_search.rs  experiment_c_learning.rs  homeostasis_grid_search.rs  homeostasis_grid_search_loop.rs  main.rs  realtime_grid_performance.rs
simulations/gridworld_sensorimotor/: main.rs  visuals.rs
simulations/realtime_environment/: Cargo.toml  README.md  main.rs
src/: constants.rs  dendritoma.rs  environment.rs  glia.rs  intrinsic_motivation.rs  lib.rs  lru_cache.rs  main.rs  nenv.rs  network.rs  neuromodulation.rs  predictive.rs  sparse.rs  visuals.rs  working_memory.rs
src/autoconfig/: adaptive.rs  architecture.rs  derivation.rs  mod.rs  params.rs  task.rs  validation.rs
src/plasticity/: eligibility.rs  mod.rs  normalization.rs  short_term.rs  stdp.rs
tests/: adaptive_system_test.rs  autoconfig_integration_test.rs
