[package]
name = "nenv_visual_sim"
version = "0.1.0"
edition = "2021"
authors = ["Pedro H. Contessoto"]
description = "Biologically-inspired neural network with STDP, homeostasis, and sleep-based memory consolidation"
license = "MIT"

[lib]
name = "nenv_visual_sim"
path = "src/lib.rs"

# Simulação GridWorld com aprendizado sensorimotor
[[bin]]
name = "gridworld_sensorimotor"
path = "simulations/gridworld_sensorimotor/main.rs"

[[bin]]
name = "adaptive_learning"
path = "simulations/adaptive_learning/main.rs"

# Experimento A: Controle homeostático puro (sem RL/sono)
[[bin]]
name = "experiment_a_fr_control"
path = "simulations/adaptive_learning/experiment_a_fr_control.rs"

# Experimento A-Prime: Auto-regulação homeostática PURA (sem PI)
[[bin]]
name = "experiment_a_prime_pure_homeostasis"
path = "simulations/adaptive_learning/experiment_a_prime_pure_homeostasis.rs"

# Grid Search: Encontra sweet spot dos parâmetros homeostáticos
[[bin]]
name = "homeostasis_grid_search"
path = "simulations/adaptive_learning/homeostasis_grid_search.rs"

# Deep Diagnostic: Análise ultra-detalhada de todas as métricas
[[bin]]
name = "deep_diagnostic"
path = "simulations/adaptive_learning/deep_diagnostic.rs"

[dependencies]
macroquad = "0.4"
rand = "0.8"
rand_distr = "0.4"

[profile.release]
opt-level = 3
lto = true
