[package]
name = "nenv_v2"
version = "2.0.0"
edition = "2021"
authors = ["NEN-V Team"]
description = "Neuromorphic Energy-based Neural Virtual Model - Biologically plausible neural network with STDP, homeostasis, working memory, predictive coding, and intrinsic motivation"
license = "MIT"
readme = "README.md"
keywords = ["neural-network", "neuromorphic", "stdp", "spiking", "biologically-plausible"]
categories = ["science", "simulation"]

[lib]
name = "nenv_v2"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
approx = "0.5"

[dev-dependencies]
approx = "0.5"

[features]
default = []
full = []

[[example]]
name = "basic_network"
path = "examples/basic_network.rs"

[[example]]
name = "rl_agent"
path = "examples/rl_agent.rs"

[[example]]
name = "curiosity_exploration"
path = "examples/curiosity_exploration.rs"

[[example]]
name = "test_input_propagation"
path = "examples/test_input_propagation.rs"

[[example]]
name = "diagnose_network_death"
path = "examples/diagnose_network_death.rs"

[[example]]
name = "weight_decay_experiment"
path = "examples/weight_decay_experiment.rs"

[[example]]
name = "deep_flow_analysis"
path = "examples/deep_flow_analysis.rs"

[[bin]]
name = "realtime_sim"
path = "simulations/realtime_environment/main.rs"

[[bin]]
name = "hyperopt"
path = "experiments/hyperparameter_search/main.rs"

[[bin]]
name = "experiment_c_learning"
path = "simulations/adaptive_learning/experiment_c_learning.rs"

[[bin]]
name = "adaptive_learning"
path = "simulations/adaptive_learning/main.rs"

[[bin]]
name = "deep_diagnostic"
path = "simulations/adaptive_learning/deep_diagnostic.rs"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 1
